CDP-BE-Pipeline/2_CD/Kubernetes/Istio/UAT/AuthPol/ALLOW.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: foo
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["/*"]
